          orphans whether or not it remains attached to its
          also-deleted parent.
    
    - fixed order_by calculation in Query to properly alias
      mapper-config'ed order_by when using select_from()

- sql
    - 'name' is no longer a required constructor argument for
      Column().  It (and .key) may now be deferred until the column
      is added to a Table.

- extensions
    - The "synonym" function is now directly usable with
      "declarative".  Pass in the decorated property using the
      "descriptor" keyword argument, e.g.: somekey =
      synonym('_somekey', descriptor=property(g, s))
    
    - the "deferred" function is usable with "declarative".
      Simplest usage is to declare deferred and Column together,
      e.g.:  data = deferred(Column(Text))
      
    - Declarative also gained @synonym_for(...) and
      @comparable_using(...), front-ends for synonym and
      comparable_property.

    - Declarative will complete setup for Columns lacking names,
      allows a more DRY syntax.

        class Foo(Base):
            __tablename__ = 'foos'
            id = Column(Integer, primary_key=True)

0.4.4
------
- sql
    - Can again create aliases of selects against textual FROM
      clauses, [ticket:975]

    - The value of a bindparam() can be a callable, in which
      case it's evaluated at statement execution time to get the
      value.

    - Added exception wrapping/reconnect support to result set
      fetching.  Reconnect works for those databases that raise
      a catchable data error during results (i.e. doesn't work
      on MySQL) [ticket:978]

    - Implemented two-phase API for "threadlocal" engine, via
      engine.begin_twophase(), engine.prepare() [ticket:936]

    - Fixed bug which was preventing UNIONS from being
      cloneable, [ticket:986]

    - Added "bind" keyword argument to insert(), update(),
      delete() and DDL(). The .bind property is now assignable
      on those statements as well as on select().
