@@ -641,8 +641,8 @@ class PGCompiler(compiler.DefaultCompiler):
     operators.update(
         {
             sql_operators.mod : '%%',
-            sql_operators.ilike_op: 'ILIKE',
-            sql_operators.notilike_op: 'NOT ILIKE'
+            sql_operators.ilike_op: lambda x, y, escape=None: '%s ILIKE %s' % (x, y) + (escape and ' ESCAPE \'%s\'' % escape or ''),
+            sql_operators.notilike_op: lambda x, y, escape=None: '%s NOT ILIKE %s' % (x, y) + (escape and ' ESCAPE \'%s\'' % escape or ''),
         }
     )
 
